--- a/tallerSesion4/build.gradle
+++ b/tallerSesion4/build.gradle
@@ -12,8 +12,36 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    // implementation 'io.appium:java-client:8.1.1'
+    implementation 'io.appium:java-client:7.6.0'
+    //  implementation 'org.seleniumhq.selenium:selenium-java:4.3.0'
+    implementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
+    //cucumber
+    testImplementation 'io.cucumber:cucumber-junit:7.6.0'
+    implementation 'io.cucumber:cucumber-java:7.6.0'
+    implementation 'net.masterthought:cucumber-reporting:5.7.2'
 }
 
 test {
     useJUnitPlatform()
+}
+
+configurations{
+    cucumberRuntime{
+        extendsFrom testImplementation
+    }
+}
+
+// gradle clean cucumber -Psuite=@Group3
+task cucumber(){
+    dependsOn assemble, testClasses
+    doLast {
+        javaexec {
+            main="io.cucumber.core.cli.Main"
+            classpath = configurations.cucumberRuntime + sourceSets.main.output + sourceSets.test.output
+            args = ['--plugin', 'json:build/reports/cucumber/report.json','--glue', 'runner', 'src/test/resources', '--tags']+[suite]
+            //       ------- REPORT ------ -- STEP DEFINITION- ----- FEATURE -----
+        }
+
+    }
 }
